--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="A party game for quarantined people" />
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon_192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Cards Against COVID</title>
