--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon_192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="/socket.io/socket.io.js"></script>
     <title>Cards Against COVID</title>
   </head>
   <body>
